--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme japonais traversant passage piéton">
+						<img src="./assets/images/slider/portrait0_2x.webp" srcset="./assets/images/slider/portrait0-mobile_1x.webp 1x, ./assets/images/slider/portrait0_2x.webp 2x" class="d-block w-100" alt="Homme japonais traversant passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Public enthousiaste pendant un concert">
+						<img src="./assets/images/slider/concert0_2x.webp" srcset="./assets/images/slider/concert0-mobile_1x.webp 1x, ./assets/images/slider/concert0_2x.webp 2x" class="d-block w-100" alt="Public enthousiaste pendant un concert">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Le marié embrassant la mariée en dansant pendant la fête">
+						<img src="./assets/images/slider/mariage0_2x.webp" srcset="./assets/images/slider/mariage0_2x.webp 1x, ./assets/images/slider/mariage0_2x.webp 2x" class="d-block w-100" alt="Le marié embrassant la mariée en dansant pendant la fête">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -83,15 +83,15 @@
 			<div class="container py-3">
 				<!-- Galerie-->
 				<figure class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Public et groupe pendant concert"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme en costume"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Deux salariées en entreprise"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Les mains d'un homme et les mains d'une femme qui se touchent"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme qui plisse les yeux"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de mariés qui se tiennent la main et rient"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune fille qui porte des lunettes"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Portrait d'un chanteur en concert qui lève le bras en l'air"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une salariée derrière son ordinateur en train de sourire"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert1.webp" alt="Public et groupe pendant concert"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise1.webp" alt="Portrait d'un homme en costume"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise2.webp" alt="Deux salariées en entreprise"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage1.webp" alt="Les mains d'un homme et les mains d'une femme qui se touchent"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait1.webp" alt="Portrait d'un homme qui plisse les yeux"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage2.webp" alt="Couple de mariés qui se tiennent la main et rient"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait2.webp" alt="Portrait d'une jeune fille qui porte des lunettes"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert2.webp" alt="Portrait d'un chanteur en concert qui lève le bras en l'air"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise3.webp" alt="Portrait d'une salariée derrière son ordinateur en train de sourire"/>
 				</figure>
 			</div>
 			<div class="quote">
