--- a/index.html
+++ b/index.html
@@ -41,13 +41,28 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/portrait0_2x.webp" srcset="./assets/images/slider/portrait0-mobile_1x.webp 1x, ./assets/images/slider/portrait0_2x.webp 2x" class="d-block w-100" alt="Homme japonais traversant passage piéton">
+						<img
+						srcset="./assets/images/slider/portrait0-mobile_1x.webp 650w, ./assets/images/slider/portrait0_2x.webp 1349w"
+						src="./assets/images/slider/portrait0_2x.webp"
+						style="width:100%"
+						class="d-block w-100"
+						alt="Homme japonais traversant passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/concert0_2x.webp" srcset="./assets/images/slider/concert0-mobile_1x.webp 1x, ./assets/images/slider/concert0_2x.webp 2x" class="d-block w-100" alt="Public enthousiaste pendant un concert">
+						<img
+							srcset="./assets/images/slider/concert0-mobile_1x.webp 650w, ./assets/images/slider/concert0_2x.webp 1349w"
+							src="./assets/images/slider/concert0_2x.webp"
+							style="width:100%"
+							class="d-block w-100"
+							alt="Public enthousiaste pendant un concert">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/mariage0_2x.webp" srcset="./assets/images/slider/mariage0_2x.webp 1x, ./assets/images/slider/mariage0_2x.webp 2x" class="d-block w-100" alt="Le marié embrassant la mariée en dansant pendant la fête">
+						<img
+						srcset="./assets/images/slider/mariage0-mobile_1x.webp 650w, ./assets/images/slider/mariage0_2x.webp 1349w"
+						src="./assets/images/slider/mariage0_2x.webp"
+						style="width:100%"
+						class="d-block w-100"
+						alt="Le marié embrassant la mariée en dansant pendant la fête">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
