bootstrap.css nettoyé

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 						style="width:100%"
 						class="d-block w-100"
 						alt="Le marié embrassant la mariée en dansant pendant la fête">
-
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -80,9 +79,14 @@
 
 	<main>
 
-		<article>
+		<article id="prese">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci">
+				<img
+				srcset="./assets/images/nina_x1.webp 319w, ./assets/images/nina.webp 349w"
+				src="./assets/images/nina.webp"
+				style="width:100%"
+				class="d-block w-100"
+				alt="Portrait de Nina Carducci">
 			</div>
 			<div id="about-me">
 				<h3 class="about-me__title">A propos de moi</h3>
@@ -190,7 +194,12 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webp" alt="Appareil photo réflex Minolta">
+					<img
+					srcset="./assets/images/camera_x1.webp 319w, ./assets/images/camera.webp 349w"
+					src="./assets/images/camera.webp"
+					style="width:100%"
+					class="d-block w-100"
+					alt="Appareil photo réflex Minolta">
 				</div>
 			</div>
 		</div>
