bootstrap.bundle.js partiellement nettoyé

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 	<main>
 
-		<article id="prese">
+		<article id="presentation">
 			<div class="picture left">
 				<img
 				srcset="./assets/images/nina_x1.webp 319w, ./assets/images/nina.webp 349w"
