architecture code allégée

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt=""></a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt=""></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -45,6 +45,7 @@
 						srcset="./assets/images/slider/portrait0-mobile_1x.webp 650w, ./assets/images/slider/portrait0_2x.webp 1349w"
 						src="./assets/images/slider/portrait0_2x.webp"
 						style="width:100%"
+						style="height: auto;"
 						class="d-block w-100"
 						alt="Homme japonais traversant passage piéton">
 					</div>
@@ -53,6 +54,7 @@
 							srcset="./assets/images/slider/concert0-mobile_1x.webp 650w, ./assets/images/slider/concert0_2x.webp 1349w"
 							src="./assets/images/slider/concert0_2x.webp"
 							style="width:100%"
+							style="height: auto;"
 							class="d-block w-100"
 							alt="Public enthousiaste pendant un concert">
 					</div>
@@ -61,6 +63,7 @@
 						srcset="./assets/images/slider/mariage0-mobile_1x.webp 650w, ./assets/images/slider/mariage0_2x.webp 1349w"
 						src="./assets/images/slider/mariage0_2x.webp"
 						style="width:100%"
+						style="height: auto;"
 						class="d-block w-100"
 						alt="Le marié embrassant la mariée en dansant pendant la fête">
 					</div>
@@ -85,6 +88,7 @@
 				srcset="./assets/images/nina_x1.webp 319w, ./assets/images/nina.webp 349w"
 				src="./assets/images/nina.webp"
 				style="width:100%"
+				style="height: auto;"
 				class="d-block w-100"
 				alt="Portrait de Nina Carducci">
 			</div>
@@ -198,6 +202,7 @@
 					srcset="./assets/images/camera_x1.webp 319w, ./assets/images/camera.webp 349w"
 					src="./assets/images/camera.webp"
 					style="width:100%"
+					style="height: auto;"
 					class="d-block w-100"
 					alt="Appareil photo réflex Minolta">
 				</div>
