--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="">
 	<title>Nina Carducci - Photographe</title>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 
 	<header>
 		<div class="top-header">
-			<h3 class="name">Nina Carducci</h3>
+			<h1 class="name">Nina Carducci</h1>
 			<nav class="nav">   
 				<ul>
 					<li><a href="#about">À propos</a></li>
@@ -93,8 +93,8 @@
 				alt="Portrait de Nina Carducci">
 			</div>
 			<div id="about-me">
-				<h3 class="about-me__title">A propos de moi</h3>
-				<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+				<h2 class="about-me__title">A propos de moi</h3>
+				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
@@ -103,7 +103,7 @@
 
 		<!--/ Galerie de photos avec option de filtres en JS-->
 		<section id="gallery">
-			<h3 class="title">Portfolio</h3>
+			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<!-- Galerie-->
 				<figure class="gallery" style="display: none">
@@ -184,9 +184,7 @@
 			</div>
 			<div class="quote">
 				<figure>
-					<blockquote>
-						<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
-					</blockquote>
+					<blockquote class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
 			</div>
@@ -196,7 +194,7 @@
 
 	<aside>
 		<div id="services">
-			<h3 class="title">Mes services</h3>
+			<h2 class="title">Mes services</h2>
 			<div class="container">
 
 				<article class="service">
@@ -237,9 +235,7 @@
 
 		<div class="quote">
 			<figure>
-				<blockquote>
-					<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
-				</blockquote>
+				<blockquote class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
@@ -249,7 +245,7 @@
 		<div id="contact">
 			<div class="container">
 				<div class="form-container">
-					<h3>Une question ? Une demande de devis ?</h3>
+					<p id="question">Une question ? Une demande de devis ?</p>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 					<form action="" method="post">
 						<label>Nom</label>
