petites corrections structure html

--- a/index.html
+++ b/index.html
@@ -19,66 +19,65 @@
 </head>
 <body>
 
-	<header>
-		<div class="top-header">
-			<h1 class="name">Nina Carducci</h1>
-			<nav class="nav">   
-				<ul>
-					<li><a href="#about">À propos</a></li>
-					<li><a href="#gallery">Galerie</a></li>
-					<li><a href="#services">Service</a></li>
-					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt=""></a></li>
-				</ul>
-			</nav>
-		</div>
-		<div id="header">
-			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img
-						srcset="./assets/images/slider/portrait0-mobile_1x.webp 650w, ./assets/images/slider/portrait0_2x.webp 1349w"
-						src="./assets/images/slider/portrait0_2x.webp"
-						style="width:100%"
-						style="height: auto;"
-						class="d-block w-100"
-						alt="Homme japonais traversant passage piéton">
-					</div>
-					<div class="carousel-item">
-						<img
-							srcset="./assets/images/slider/concert0-mobile_1x.webp 650w, ./assets/images/slider/concert0_2x.webp 1349w"
-							src="./assets/images/slider/concert0_2x.webp"
-							style="width:100%"
-							style="height: auto;"
-							class="d-block w-100"
-							alt="Public enthousiaste pendant un concert">
-					</div>
-					<div class="carousel-item">
-						<img
-						srcset="./assets/images/slider/mariage0-mobile_1x.webp 650w, ./assets/images/slider/mariage0_2x.webp 1349w"
-						src="./assets/images/slider/mariage0_2x.webp"
-						style="width:100%"
-						style="height: auto;"
-						class="d-block w-100"
-						alt="Le marié embrassant la mariée en dansant pendant la fête">
-					</div>
-				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</div>
+	<header class="top-header">
+		<h1 class="name">Nina Carducci</h1>
+		<nav class="nav">   
+			<ul>
+				<li><a href="#about">À propos</a></li>
+				<li><a href="#gallery">Galerie</a></li>
+				<li><a href="#services">Service</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.webp" alt=""></a></li>
+			</ul>
+		</nav>
 	</header>
+
+	<section id="header">
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img
+					srcset="./assets/images/slider/portrait0-mobile_1x.webp 650w, ./assets/images/slider/portrait0_2x.webp 1349w"
+					src="./assets/images/slider/portrait0_2x.webp"
+					style="width:100%"
+					style="height: auto;"
+					class="d-block w-100"
+					alt="Homme japonais traversant passage piéton">
+				</div>
+				<div class="carousel-item">
+					<img
+						srcset="./assets/images/slider/concert0-mobile_1x.webp 650w, ./assets/images/slider/concert0_2x.webp 1349w"
+						src="./assets/images/slider/concert0_2x.webp"
+						style="width:100%"
+						style="height: auto;"
+						class="d-block w-100"
+						alt="Public enthousiaste pendant un concert">
+				</div>
+				<div class="carousel-item">
+					<img
+					srcset="./assets/images/slider/mariage0-mobile_1x.webp 650w, ./assets/images/slider/mariage0_2x.webp 1349w"
+					src="./assets/images/slider/mariage0_2x.webp"
+					style="width:100%"
+					style="height: auto;"
+					class="d-block w-100"
+					alt="Le marié embrassant la mariée en dansant pendant la fête">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+	</section>
 
 	<main>
 
