--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				alt="Portrait de Nina Carducci">
 			</div>
 			<div id="about-me">
-				<h2 class="about-me__title">A propos de moi</h3>
+				<h2>A propos de moi</h3>
 				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
@@ -242,33 +242,33 @@
 		</div>
 	</aside>
 
-	<footer>
-		<div id="contact">
-			<div class="container">
-				<div class="form-container">
-					<p id="question">Une question ? Une demande de devis ?</p>
-					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-					<form action="#" method="post">
-						<label for="nom">Nom</label>
-						<input type="text" name="nom" id="nom">
-						<label for="email">Email</label>
-						<input type="email" name="email" id="email">
-						<label for="message">Message</label>
-						<textarea name="message" id="message" cols="30" rows="10"></textarea>
-						<input type="submit" value="Envoyer"/>
-					</form>
-				</div>
-				<div class="picture right">
-					<img
-					srcset="./assets/images/camera_x1.webp 319w, ./assets/images/camera.webp 349w"
-					src="./assets/images/camera.webp"
-					style="width:100%"
-					style="height: auto;"
-					class="d-block w-100"
-					alt="Appareil photo réflex Minolta">
-				</div>
+	<footer id="contact">
+
+		<div class="form-container">
+			<div id="form-column1">
+				<h2>Une question ? Une demande de devis ?</h2>
+				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+				<form action="#" method="post">
+					<label for="nom">Nom</label>
+					<input type="text" name="nom" id="nom">
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer"/>
+				</form>
+			</div>
+			<div class="picture right">
+				<img
+				srcset="./assets/images/camera_x1.webp 319w, ./assets/images/camera.webp 349w"
+				src="./assets/images/camera.webp"
+				style="width:100%"
+				style="height: auto;"
+				class="d-block w-100"
+				alt="Appareil photo réflex Minolta">
 			</div>
 		</div>
+
 	</footer>
 
 </body>
