--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta name="theme-color" content="#6d503b">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#6d503b">
-	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.">
+	<meta name="description" content="Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.">
 	<meta name="robots" content="">
 	<meta name="keywords" content="">
-	<title>Nina Carducci - Photographe</title>
+	<title>Nina Carducci - Photographe à Bordeaux</title>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="manifest" href="./assets/manifest.json">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -242,7 +242,7 @@
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer"/>
 				</form>
-			</div>
+			</div>			
 			<div class="picture right">
 				<img
 				srcset="./assets/images/camera_x1.webp 319w, ./assets/images/camera.webp 349w"
@@ -250,6 +250,12 @@
 				width="359" height="358"
 				class="d-block w-100"
 				alt="Appareil photo réflex Minolta">
+			</div>
+			<div itemprop=”address” itemscope itemtype=”http://schema.org/PostalAddress”>
+				<span itemprop=”streetAddress”>3 rue des Jardins</span>
+				<span itemprop=”addressLocality”>Bordeaux</span>,
+				<span itemprop=”addressRegion”> Bordeaux</span>
+				<span itemprop=”postalCode”>33000</span>
 			</div>
 		</div>
 
