--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				"addressLocality": "Bordeaux",
 				"addressRegion": "Nouvelle-Aquitaine",
 				"postalCode": "33200",
-				"addressCountry": "France"
+				"addressCountry": "France",
 			  },
-			"sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"]
+			"sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
 		}
 	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
@@ -263,7 +263,7 @@
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer"/>
 				</form>
-				<div itemprop=”address” itemscope itemtype=”http://schema.org/PostalAddress”>
+				<div itemprop=”address” itemscope itemtype=”https://schema.org/PostalAddress”>
 					<span itemprop=”streetAddress”>3 rue des Jardins, </span>
 					<span itemprop=”postalCode”>33000</span>
 					<span itemprop=”addressRegion”>Bordeaux</span>
