ajout balises meta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<meta name="description" content="Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.">
 	<meta name="robots" content="">
 	<meta name="keywords" content="">
+	<!-- Schema.org meta for Google+ -->
+	<meta itemprop="name" content="Nina Carducci">
+	<meta itemprop="description" content="Photographe à Bordeaux">
+	<meta itemprop="image" content="./assets/images/nina.webp">
 	<title>Nina Carducci - Photographe à Bordeaux</title>
 	<script type="application/ld+json">
 		{
