--- a/index.html
+++ b/index.html
@@ -260,12 +260,14 @@
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer"/>
 				</form>
-				<div itemprop=”PostalAddress” itemscope itemtype=”https://schema.org/PostalAddress”>
-					<span itemprop=”streetAddress”>3 rue des Jardins, </span>
-					<span itemprop=”postalCode”>33000</span>
-					<span itemprop=”addressRegion”>Bordeaux</span>
-					<div itemprop="telephone">05 56 67 78 89</div>
-				</div>
+				<p itemprop="name">Nina Carducci</p>
+					<div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+						<span itemprop="streetAddress">3 rue des Jardins, </span>
+						<span itemprop="postalCode">33000</span>
+						<span itemprop="addressLocality">Bordeaux</span>
+						<span itemprop="addressRegion">Nouvelle-Aquitaine</span>
+					</div>
+			  	</div>
 				<div itemprop="openingHoursSpecification" itemscope itemtype="https://schema.org/OpeningHoursSpecification">
 					<span itemprop="dayOfWeek" content="Monday">Lundi : </span>
 					<span itemprop="opens" content="09:00">10h - </span>
