--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			"url": "https://nina-carducci-photographe.com",
 			"description": "Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.",
 			"email": "nina-carducci@photographe.com",
-			"telephone": "05 56 67 78 89"
+			"telephone": "05 56 67 78 89",
 			"address": {"@type": "PostalAddress","streetAddress":"68 avenue Alsace-Lorraine","addressLocality":"Bordeaux","addressRegion":"Nouvelle-Aquitaine","postalCode":"33200","addressCountry":"France"},
 			"sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
 		}
