--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 			"description": "Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.",
 			"email": "nina-carducci@photographe.com",
 			"telephone": "05 56 67 78 89",
-			"address": {"@type": "PostalAddress","streetAddress":"68 avenue Alsace-Lorraine","addressLocality":"Bordeaux","addressRegion":"Nouvelle-Aquitaine","postalCode":"33200","addressCountry":"France"},
 			"sameAs": ["https://www.instagram.com/ninacarducci.photo/?hl=fr"],
+			"address": {
+				"@type": "PostalAddress",
+				"streetAddress": "68 avenue Alsace-Lorraine",
+				"addressLocality": "Bordeaux",
+				"addressRegion": "Nouvelle-Aquitaine",
+				"postalCode": "33200",
+				"addressCountry": "France"
+			  }
 		}
 	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
