ajout credits photos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			"@type": "Person",
 			"name": "Nina Carducci",
 			"jobTitle": "Photographe",
-			"url": "https://nina-carducci-photographe.com",
+			"url": "https://beautiful-longma-d6e60e.netlify.app/",
 			"description": "Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.",
 			"email": "nina-carducci@photographe.com",
 			"telephone": "05 56 67 78 89",
@@ -34,6 +34,48 @@
 			  }
 		}
 	</script>
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org/",
+		  "@type": "ImageObject",
+		  "contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/portrait0_2x.webp",
+		  "creditText": "Homme japonais traversant passage piéton",
+		  "creator": {
+			"@type": "Person",
+			"name": "Nina Carducci"
+		   }
+		}
+		{
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/concert0_2x.webp",
+			"creditText": "Homme japonais traversant passage piéton",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/portrait0_2x.webp",
+			"creditText": "Public enthousiaste pendant un concert",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/mariage0_2x.webp",
+			"creditText": "Le marié embrassant la mariée en dansant pendant la fête",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="manifest" href="./assets/manifest.json">
