ajout infos images rich snippet

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 			"@context": "https://schema.org/",
 			"@type": "ImageObject",
 			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/concert0_2x.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
 			"creditText": "Homme japonais traversant passage piéton",
 			"creator": {
 			  "@type": "Person",
@@ -59,6 +60,7 @@
 			"@context": "https://schema.org/",
 			"@type": "ImageObject",
 			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/portrait0_2x.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
 			"creditText": "Public enthousiaste pendant un concert",
 			"creator": {
 			  "@type": "Person",
@@ -69,7 +71,129 @@
 			"@context": "https://schema.org/",
 			"@type": "ImageObject",
 			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/slider/mariage0_2x.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
 			"creditText": "Le marié embrassant la mariée en dansant pendant la fête",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/nina.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Portrait de Nina Carducci",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/concerts/concert1.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Public et groupe de musiciens pendant concert",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/entreprise/entreprise1.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Portrait d'un homme en costume",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/entreprise/entreprise2.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Deux salariées en entreprise",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/mariage/mariage1.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Les mains d'un homme et les mains d'une femme qui se touchent",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/portraits/portrait1.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Portrait d'un homme qui plisse les yeux",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/mariage/mariage2.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Couple de mariés qui se tiennent la main et rient",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/portraits/portrait2.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Portrait d'une jeune fille qui porte des lunettes",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/concerts/concert2.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Portrait d'un chanteur en concert qui lève le bras en l'air",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/gallery/entreprise/entreprise3.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Portrait d'une salariée derrière son ordinateur en train de sourire",
+			"creator": {
+			  "@type": "Person",
+			  "name": "Nina Carducci"
+			 }
+		  }
+		  {
+			"@context": "https://schema.org/",
+			"@type": "ImageObject",
+			"contentUrl": "https://beautiful-longma-d6e60e.netlify.app/assets/images/camera.webp",
+			"license": "https://beautiful-longma-d6e60e.netlify.app/",
+			"creditText": "Appareil photo Minolta",
 			"creator": {
 			  "@type": "Person",
 			  "name": "Nina Carducci"
@@ -175,7 +299,7 @@
 					srcset="./assets/images/gallery/concerts/concert1_x1.webp 300w, ./assets/images/gallery/concerts/concert1.webp 466w"
 					src="./assets/images/gallery/concerts/concert1.webp"
 					width="466" height="621"
-					alt="Public et groupe pendant concert"/>
+					alt="Public et groupe de musiciens pendant concert"/>
 					
 					<img data-gallery-tag="Entreprises"
 					class="gallery-item"
@@ -310,13 +434,12 @@
 					<input type="submit" value="Envoyer"/>
 				</form>
 				<p itemprop="name">Nina Carducci</p>
-					<div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-						<span itemprop="streetAddress">3 rue des Jardins, </span>
-						<span itemprop="postalCode">33000</span>
-						<span itemprop="addressLocality">Bordeaux</span>
-						<span itemprop="addressRegion">Nouvelle-Aquitaine</span>
-					</div>
-			  	</div>
+				<div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+					<span itemprop="streetAddress">3 rue des Jardins, </span>
+					<span itemprop="postalCode">33000</span>
+					<span itemprop="addressLocality">Bordeaux</span>
+					<span itemprop="addressRegion">Nouvelle-Aquitaine</span>
+				</div>
 				<div itemprop="openingHoursSpecification" itemscope itemtype="https://schema.org/OpeningHoursSpecification">
 					<span itemprop="dayOfWeek" content="Monday">Lundi : </span>
 					<span itemprop="opens" content="09:00">10h - </span>
@@ -338,7 +461,8 @@
 					<span itemprop="opens" content="09:00">10h - </span>
 					<span itemprop="closes" content="18:00">19h</span>
 				</div>
-			</div>			
+			</div>
+
 			<div class="picture right">
 				<img
 				srcset="./assets/images/camera_x1.webp 319w, ./assets/images/camera.webp 349w"
