ajout breadcrumbs google rich snippet

--- a/index.html
+++ b/index.html
@@ -199,7 +199,34 @@
 			  "name": "Nina Carducci"
 			 }
 		  }
-		</script>
+	</script>
+	<script type="application/ld+json">
+		{
+			"@context": "https://schema.org",
+			"@type": "BreadcrumbList",
+			"itemListElement": [{
+			"@type": "ListItem",
+			"position": 1,
+			"name": "About",
+			"item": "https://beautiful-longma-d6e60e.netlify.app/#about"
+			},{
+			"@type": "ListItem",
+			"position": 2,
+			"name": "Gallery",
+			"item": "https://beautiful-longma-d6e60e.netlify.app/#gallery"
+			},{
+			"@type": "ListItem",
+			"position": 3,
+			"name": "services",
+			"item": "https://beautiful-longma-d6e60e.netlify.app/#services"
+			},{
+			"@type": "ListItem",
+			"position": 4,
+			"name": "Contact",
+			"item": "https://beautiful-longma-d6e60e.netlify.app/#contact"
+			}]
+		}
+	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="manifest" href="./assets/manifest.json">
@@ -269,7 +296,7 @@
 
 	<main>
 
-		<article id="presentation">
+		<article id="about">
 			<div class="picture left">
 				<img
 				srcset="./assets/images/nina_x1.webp 352w, ./assets/images/nina.webp 528w"
