ajout balises meta pour Facebook

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 	<!-- Schema.org meta for Google+ -->
 	<meta itemprop="name" content="Nina Carducci">
 	<meta itemprop="description" content="Photographe à Bordeaux">
-	<meta itemprop="image" content="./assets/images/nina.webp">
+	<!-- champs content ???-->
+	<meta itemprop="image" content="https://beautiful-longma-d6e60e.netlify.app/assets/images/nina.webp">
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Nina Carducci - Photographe à Bordeaux"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://beautiful-longma-d6e60e.netlify.app/"/>
+	<meta property="og:image" content="https://beautiful-longma-d6e60e.netlify.app/assets/images/nina.webp"/>
+	<meta property="og:description" content="Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage."/>
 	<title>Nina Carducci - Photographe à Bordeaux</title>
 	<script type="application/ld+json">
 		{
