ajout des balises meta twitter

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 	<meta property="og:url" content="https://beautiful-longma-d6e60e.netlify.app/"/>
 	<meta property="og:image" content="https://beautiful-longma-d6e60e.netlify.app/assets/images/nina.webp"/>
 	<meta property="og:description" content="Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage."/>
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.">
+	<meta name="twitter:site" content="https://beautiful-longma-d6e60e.netlify.app/">
+	<meta name="twitter:title" content="Nina Carducci - Photographe à Bordeaux">
+	<meta name="twitter:description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.">
+	<meta name="twitter:creator" content="Nina Carducci">
+	<!-- Twitter Summary card images must be at least 200x200px -->
+	<meta name="twitter:image" content="https://beautiful-longma-d6e60e.netlify.app/assets/images/nina.webp">
 	<title>Nina Carducci - Photographe à Bordeaux</title>
 	<script type="application/ld+json">
 		{
