--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 		}
 	</script>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="manifest" href="./assets/manifest.json">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -465,9 +465,12 @@
 				<div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
 					<span itemprop="streetAddress">3 rue des Jardins, </span>
 					<span itemprop="postalCode">33000</span>
-					<span itemprop="addressLocality">Bordeaux</span>
-					<span itemprop="addressRegion">Nouvelle-Aquitaine</span>
+					<span itemprop="addressLocality">Bordeaux, </span>
+					<span itemprop="addressRegion">Nouvelle-Aquitaine - </span>
+					<span itemprop="telephone">05 56 67 78 89</span>
 				</div>
+				<br>
+				<p>Horaires</p>
 				<div itemprop="openingHoursSpecification" itemscope itemtype="https://schema.org/OpeningHoursSpecification">
 					<span itemprop="dayOfWeek" content="Monday">Lundi : </span>
 					<span itemprop="opens" content="09:00">10h - </span>
