--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#6d503b">
 	<meta name="description" content="Photographe à Bordeaux, je propose toutes sortes de prestations : portraits, visuels pour votre entreprise, albums de mariage.">
-	<meta name="robots" content="">
-	<meta name="keywords" content="">
+	<meta name="robots" content="follow">
+	<meta name="keywords" content="photographie,photographe,création photographique,service,Bordeaux,Nina Carducci,prestation,portrait,entreprise,marriage,art">
 	<!-- Schema.org meta for Google+ -->
 	<meta itemprop="name" content="Nina Carducci">
 	<meta itemprop="description" content="Photographe à Bordeaux">
-	<!-- champs content ???-->
 	<meta itemprop="image" content="https://beautiful-longma-d6e60e.netlify.app/assets/images/nina.webp">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Nina Carducci - Photographe à Bordeaux"/>
@@ -463,14 +462,17 @@
 				</form>
 				<p itemprop="name">Nina Carducci</p>
 				<div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+					<p>Adresse : </p>
 					<span itemprop="streetAddress">3 rue des Jardins, </span>
 					<span itemprop="postalCode">33000</span>
 					<span itemprop="addressLocality">Bordeaux, </span>
-					<span itemprop="addressRegion">Nouvelle-Aquitaine - </span>
-					<span itemprop="telephone">05 56 67 78 89</span>
+					<span itemprop="addressRegion">Nouvelle-Aquitaine</span>
+					<br>
+					<br>
+					<span itemprop="telephone">Numéro de téléphone : 05 56 67 78 89</span>
 				</div>
 				<br>
-				<p>Horaires</p>
+				<p>Horaires :</p>
 				<div itemprop="openingHoursSpecification" itemscope itemtype="https://schema.org/OpeningHoursSpecification">
 					<span itemprop="dayOfWeek" content="Monday">Lundi : </span>
 					<span itemprop="opens" content="09:00">10h - </span>
